# deep-researcher-claude

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-09-mcp-server-plan.md
docs/superpowers/specs/: 2026-04-09-mcp-server-design.md
src/deep_researcher/: __init__.py  __main__.py  agent.py  auth.py  auth_chatgpt.py  charts.py  config.py  constants.py  display.py  elsevier_auth.py  errors.py  html_compare.py  html_report.py  llm.py  llm_claude.py  llm_factory.py  mcp_server.py  mcp_tools.py  models.py  orchestrator.py  parsing.py  profiles.py  prompts.py  report.py  state.py  tui.py
src/deep_researcher/tools/: __init__.py  arxiv_search.py  base.py  categorize.py  clarify.py  comparison.py  core_search.py  cross_analysis.py  crossref.py  dblp.py  enrichment.py  executive_summary.py  fallback_synthesis.py  ieee_xplore.py  open_access.py  openalex.py  paper_details.py  pubmed.py  scholar_search.py  scopus.py  semantic_scholar.py  synthesize.py
tests/: test_agent.py  test_auth_chatgpt.py  test_charts.py  test_cli_compare.py  test_compare_orchestrator.py  test_compare_replay.py  test_comparison_prompt.py  test_comparison_tool.py  test_elsevier_auth.py  test_executive_summary_tool.py  test_html_compare.py  test_llm_chatgpt_refresh.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_orchestrator.py  test_orchestrator_replay.py  test_orchestrator_scopus.py  test_parsing.py  test_pipeline_tools.py  test_report_versioning.py  test_tool_base.py  test_tui_compare.py  test_tui_replay.py
