[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-researcher"
version = "0.5.0"
description = "An agentic academic research assistant that searches multiple databases and produces literature reviews"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "scholarly>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
# Enables `--provider claude` (routes through bundled `claude` CLI + OAuth).
# Requires `claude login` to have been run once on this machine.
claude = ["claude-agent-sdk>=0.1"]

[project.scripts]
deep-researcher = "deep_researcher.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/deep_researcher"]
