[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-researcher"
version = "0.8.0"
description = "An agentic academic research assistant that searches multiple databases and produces literature reviews"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "scholarly>=1.7.0",
    # Powers `--provider claude`, the TUI's default provider when
    # `claude login` credentials are on disk. Bundled rather than
    # optional because the TUI auto-detects and prefers it.
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
deep-researcher = "deep_researcher.__main__:main"
deep-researcher-mcp = "deep_researcher.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/deep_researcher"]
